@@ -7,6 +7,12 @@ RPMRC="${1:-rpmrc}"
 MACROS="${2:-macros}"
 PLATFORM="${3:-platform}"
 
+if grep /share/ $PLATFORM > /dev/null 2>&1 ; then
+    DEFAULTDOCDIR='%{_usr}/share/doc'
+else
+    DEFAULTDOCDIR='%{_usr}/doc'
+fi
+
 TEMPRC="/tmp/rpmrc.$$"
 cat << E_O_F > $TEMPRC
 include:	$RPMRC
@@ -21,12 +27,19 @@ OS="`$RPM --eval '%{_os}'`"
 target_platform="`$RPM --eval '%{_target_platform}'`"
 target="`$RPM --eval '%{_target}'`"
 
-case "$arch" in
-  sparc*) SUBSTS="s_sparc64_sparc_ s_sparc_sparc64_" ;;
-  *) SUBST=y___ ;;
-esac
+rm -f ${DESTDIR}/${pkglibdir}/noarch-${VENDOR}-${OS}
+ln -s ${arch}-${VENDOR}-${OS} ${DESTDIR}/${pkglibdir}/noarch-${VENDOR}-${OS}
+rm -f ${DESTDIR}/${pkglibdir}/noarch-${OS}
+ln -s ${arch}-${VENDOR}-${OS} ${DESTDIR}/${pkglibdir}/noarch-${OS}
 
-for SUBST in $SUBSTS; do
+case "$arch" in
+  i[3456]86) SUBSTS='s_i386_i386_ s_i386_i486_ s_i386_i586_ s_i386_i686_' ;;
+  sparc*) SUBSTS='s_sparc\(64\|v9\)_sparc_ s_sparc64_sparcv9_;s_sparc\([^v]\|$\)_sparcv9\1_ s_sparcv9_sparc64_;s_sparc\([^6]\|$\)_sparc64\1_' ;;
+  *) SUBSTS=y___ ;;
+esac
+base_arch=`echo $arch | sed -e 's_i?86_i386_;s_sparc.*_sparc_'`
+
+for SUBST in $SUBSTS ; do
   ARCH=`echo $arch | sed -e $SUBST`
   TARGET_PLATFORM=`echo $target_platform | sed -e $SUBST`
   TARGET=`echo $target | sed -e $SUBST`
@@ -36,7 +49,8 @@ for SUBST in $SUBSTS; do
 
   [ -d $PPD ] || mkdir $PPD
 
-  RPMRC_OPTFLAGS="`$RPM --eval '%{optflags}'`"
+#  RPMRC_OPTFLAGS="`$RPM --target $TARGET --eval '%{optflags}'`"
+  RPMRC_OPTFLAGS="`sed -n 's/^optflags: '$ARCH' //p' $RPMRC`"
   RPMRC_OPTFLAGS="`echo $RPMRC_OPTFLAGS | sed -e 's, ,\ ,g'`"
 
   ARCH_INSTALL_POST='%{nil}'
@@ -45,17 +59,24 @@ for SUBST in $SUBSTS; do
   esac
 
   cat $PLATFORM | \
-    sed -e s,@RPMRC_OPTFLAGS@,$RPMRC_OPTFLAGS, \
-	-e s,@RPMRC_ARCH@,$ARCH, \
-	-e s,@LIB@,$LIB, \
-	-e s,@ARCH_INSTALL_POST@,$ARCH_INSTALL_POST, \
+    sed -e "s,@RPMRC_OPTFLAGS@,$RPMRC_OPTFLAGS," \
+	-e "s,@RPMRC_ARCH@,$base_arch," \
+	-e "s,@LIB@,$LIB," \
+	-e "s,@ARCH_INSTALL_POST@,$ARCH_INSTALL_POST," \
+	-e "s,@DEFAULTDOCDIR@,$DEFAULTDOCDIR," \
 	-e 's,\${,%{_,' \
   > ${PPD}/macros
 
   #
   # Better try to create these too until the smoke clears. Yuck.
-  [ "${ARCH}-${VENDOR}-${OS}" = "${TARGET}" ] || ln -sf ${ARCH}-${VENDOR}-${OS} ${DESTDIR}/${pkglibdir}/${TARGET}
-  [ "${ARCH}-${VENDOR}-${OS}" = "${TARGET_PLATFORM}" ] || ln -sf ${ARCH}-${VENDOR}-${OS} ${DESTDIR}/${pkglibdir}/${TARGET_PLATFORM}
+  [ "${ARCH}-${VENDOR}-${OS}" = "${TARGET}" ] || {
+    rm -f ${DESTDIR}/${pkglibdir}/${TARGET}
+    ln -s ${ARCH}-${VENDOR}-${OS} ${DESTDIR}/${pkglibdir}/${TARGET}
+  }
+  [ "${ARCH}-${VENDOR}-${OS}" = "${TARGET_PLATFORM}" ] || {
+    rm -f ${DESTDIR}/${pkglibdir}/${TARGET_PLATFORM}
+    ln -s ${ARCH}-${VENDOR}-${OS} ${DESTDIR}/${pkglibdir}/${TARGET_PLATFORM}
+  }
 
 done
 
