@@ -3,6 +3,7 @@
 	- builds against bzip2 1.0
 	- fix: resurrect symlink unique'ifying property of finger prints.
 	- fix: broken glob test with empty build directory (Geoff Keating).
+	- fix: create per-platform directories correctly.
 
 3.0.3 -> 3.0.4
 	- use compressed filenames on install side.
